--- a/woorischool/Views/Parents/ModalViews/ParentsHomeViewController.xib
+++ b/woorischool/Views/Parents/ModalViews/ParentsHomeViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -20,7 +20,7 @@
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ParentsHomeViewController" customModule="woorischool" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ParentsHomeViewController" customModule="우리스쿨" customModuleProvider="target">
             <connections>
                 <outlet property="childProfileImageView" destination="jsa-Pz-qN3" id="v5B-1l-xRP"/>
                 <outlet property="dateStackView" destination="a9Q-hV-stV" id="iIb-vB-Mhc"/>
@@ -51,7 +51,7 @@
                     <color key="textColor" name="greyishBrown"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wdJ-SN-FYm" customClass="CustomButton" customModule="woorischool" customModuleProvider="target">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wdJ-SN-FYm" customClass="CustomButton" customModule="우리스쿨" customModuleProvider="target">
                     <rect key="frame" x="311" y="89" width="78" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="L1c-l9-Xac"/>
@@ -146,7 +146,7 @@
                 <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="a9Q-hV-stV">
                     <rect key="frame" x="40" y="370" width="334" height="41"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Coa-ku-SaL" customClass="CustomButton" customModule="woorischool" customModuleProvider="target">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Coa-ku-SaL" customClass="CustomButton" customModule="우리스쿨" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="8" width="25" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="25" id="CRp-IU-2C2"/>
@@ -169,7 +169,7 @@
                                 <action selector="selectDateEvent:" destination="-1" eventType="touchUpInside" id="SIE-k2-R1w"/>
                             </connections>
                         </button>
-                        <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hEE-ch-NNA" customClass="CustomButton" customModule="woorischool" customModuleProvider="target">
+                        <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hEE-ch-NNA" customClass="CustomButton" customModule="우리스쿨" customModuleProvider="target">
                             <rect key="frame" x="51.5" y="8" width="25" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="25" id="eVv-5Y-q9d"/>
@@ -192,7 +192,7 @@
                                 <action selector="selectDateEvent:" destination="-1" eventType="touchUpInside" id="dLn-eI-TFO"/>
                             </connections>
                         </button>
-                        <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hkb-vi-gr2" customClass="CustomButton" customModule="woorischool" customModuleProvider="target">
+                        <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hkb-vi-gr2" customClass="CustomButton" customModule="우리스쿨" customModuleProvider="target">
                             <rect key="frame" x="103" y="8" width="25" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="25" id="6vt-H5-2eC"/>
@@ -215,7 +215,7 @@
                                 <action selector="selectDateEvent:" destination="-1" eventType="touchUpInside" id="0Dc-xw-iQu"/>
                             </connections>
                         </button>
-                        <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HKj-y5-6ZD" customClass="CustomButton" customModule="woorischool" customModuleProvider="target">
+                        <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HKj-y5-6ZD" customClass="CustomButton" customModule="우리스쿨" customModuleProvider="target">
                             <rect key="frame" x="154.5" y="8" width="25" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="25" id="2PA-Bk-CLT"/>
@@ -238,7 +238,7 @@
                                 <action selector="selectDateEvent:" destination="-1" eventType="touchUpInside" id="NbW-Sv-RXJ"/>
                             </connections>
                         </button>
-                        <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QsM-yN-WlZ" customClass="CustomButton" customModule="woorischool" customModuleProvider="target">
+                        <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QsM-yN-WlZ" customClass="CustomButton" customModule="우리스쿨" customModuleProvider="target">
                             <rect key="frame" x="206" y="8" width="25" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="25" id="9Iu-Ms-4yJ"/>
@@ -261,7 +261,7 @@
                                 <action selector="selectDateEvent:" destination="-1" eventType="touchUpInside" id="IIe-TW-b5W"/>
                             </connections>
                         </button>
-                        <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dsn-Y1-Dym" customClass="CustomButton" customModule="woorischool" customModuleProvider="target">
+                        <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dsn-Y1-Dym" customClass="CustomButton" customModule="우리스쿨" customModuleProvider="target">
                             <rect key="frame" x="257.5" y="8" width="25" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="25" id="9SZ-qV-iwj"/>
@@ -284,7 +284,7 @@
                                 <action selector="selectDateEvent:" destination="-1" eventType="touchUpInside" id="BkZ-71-hMF"/>
                             </connections>
                         </button>
-                        <button opaque="NO" tag="6" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kzf-Zr-DVB" customClass="CustomButton" customModule="woorischool" customModuleProvider="target">
+                        <button opaque="NO" tag="6" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kzf-Zr-DVB" customClass="CustomButton" customModule="우리스쿨" customModuleProvider="target">
                             <rect key="frame" x="309" y="8" width="25" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="25" id="THT-Gf-5Jr"/>
@@ -333,10 +333,10 @@
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </tableView>
-                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qit-w4-nHZ" customClass="CustomView" customModule="woorischool" customModuleProvider="target">
+                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qit-w4-nHZ" customClass="CustomView" customModule="우리스쿨" customModuleProvider="target">
                             <rect key="frame" x="20" y="49" width="374" height="74"/>
                             <subviews>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZXy-3t-RmX" customClass="CustomView" customModule="woorischool" customModuleProvider="target">
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZXy-3t-RmX" customClass="CustomView" customModule="우리스쿨" customModuleProvider="target">
                                     <rect key="frame" x="21" y="15" width="44" height="44"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dotRound" translatesAutoresizingMaskIntoConstraints="NO" id="Q1T-y0-CHy">
