--- a/woorischool/Views/Parents/ModalViews/ParentsLoginViewController.xib
+++ b/woorischool/Views/Parents/ModalViews/ParentsLoginViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -23,7 +23,7 @@
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ParentsLoginViewController" customModule="woorischool" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ParentsLoginViewController" customModule="우리스쿨" customModuleProvider="target">
             <connections>
                 <outlet property="codeTextField" destination="nmZ-iH-NUD" id="FWn-Mf-QqJ"/>
                 <outlet property="phoneNumTextField" destination="ybG-wM-VIS" id="OAK-NQ-CkQ"/>
@@ -35,12 +35,6 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="우리스쿨" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wrU-8b-Tu5">
-                    <rect key="frame" x="30" y="84" width="86.5" height="29.5"/>
-                    <fontDescription key="fontDescription" name="NanumSquareRoundB" family="NanumSquareRound" pointSize="25"/>
-                    <color key="textColor" name="greenishTeal"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LRe-rV-09L">
                     <rect key="frame" x="30" y="143.5" width="169.5" height="49"/>
                     <string key="text">안녕하세요 학부모님
@@ -49,7 +43,7 @@
                     <color key="textColor" name="greyishBrown"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xoi-fn-aFL" customClass="CustomView" customModule="woorischool" customModuleProvider="target">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xoi-fn-aFL" customClass="CustomView" customModule="우리스쿨" customModuleProvider="target">
                     <rect key="frame" x="30" y="272.5" width="354" height="95"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5a6-Qk-TdN">
@@ -61,7 +55,7 @@
                                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="14"/>
                                     <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="phonePad" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
                                 </textField>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9z8-iO-2OQ" customClass="CustomButton" customModule="woorischool" customModuleProvider="target">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9z8-iO-2OQ" customClass="CustomButton" customModule="우리스쿨" customModuleProvider="target">
                                     <rect key="frame" x="277" y="7" width="70" height="33"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="70" id="5wa-bu-5VD"/>
@@ -161,7 +155,7 @@
                     <color key="textColor" name="brownGrey"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OS1-EA-753" customClass="CustomButton" customModule="woorischool" customModuleProvider="target">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OS1-EA-753" customClass="CustomButton" customModule="우리스쿨" customModuleProvider="target">
                     <rect key="frame" x="30" y="703" width="354" height="47"/>
                     <color key="backgroundColor" name="greenishTeal"/>
                     <constraints>
@@ -186,10 +180,15 @@
                     <color key="textColor" name="brownGrey"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="우리스쿨" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wrU-8b-Tu5">
+                    <rect key="frame" x="30" y="84" width="86.5" height="29.5"/>
+                    <fontDescription key="fontDescription" name="NanumSquareRoundB" family="NanumSquareRound" pointSize="25"/>
+                    <color key="textColor" name="greenishTeal"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="wrU-8b-Tu5" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="40" id="4hX-4H-SC0"/>
                 <constraint firstItem="7LA-R6-gO5" firstAttribute="top" secondItem="OS1-EA-753" secondAttribute="bottom" constant="85" id="698-cq-mvZ"/>
                 <constraint firstItem="wrU-8b-Tu5" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="30" id="6Hm-6K-K05"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="7LA-R6-gO5" secondAttribute="bottom" constant="15" id="Dk9-wo-UWe"/>
@@ -198,6 +197,7 @@
                 <constraint firstItem="OS1-EA-753" firstAttribute="top" secondItem="pPG-Ab-0eJ" secondAttribute="bottom" constant="11" id="HRV-us-IwO"/>
                 <constraint firstItem="dEM-fd-LVa" firstAttribute="centerY" secondItem="pPG-Ab-0eJ" secondAttribute="centerY" id="KWP-Nn-Zb0"/>
                 <constraint firstItem="LRe-rV-09L" firstAttribute="top" secondItem="wrU-8b-Tu5" secondAttribute="bottom" constant="30" id="KeH-0u-MpH"/>
+                <constraint firstItem="wrU-8b-Tu5" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="40" id="MUP-0s-Ozh"/>
                 <constraint firstItem="dEM-fd-LVa" firstAttribute="leading" secondItem="pPG-Ab-0eJ" secondAttribute="trailing" constant="4" id="OrH-Xn-jbD"/>
                 <constraint firstItem="xoi-fn-aFL" firstAttribute="top" secondItem="LRe-rV-09L" secondAttribute="bottom" constant="80" id="RQy-RV-gzf"/>
                 <constraint firstAttribute="trailing" secondItem="7LA-R6-gO5" secondAttribute="trailing" id="Rdg-pc-0xw"/>
