--- a/woorischool/Views/Parents/PopupViews/ClassInfoPopupViewController.xib
+++ b/woorischool/Views/Parents/PopupViews/ClassInfoPopupViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,7 +17,7 @@
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ClassInfoPopupViewController" customModule="woorischool" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ClassInfoPopupViewController" customModule="우리스쿨" customModuleProvider="target">
             <connections>
                 <outlet property="classNameLabel" destination="pHc-ro-WHP" id="Xwd-FE-P4u"/>
                 <outlet property="gradeLabel" destination="fdd-Gx-aKV" id="Zbr-Di-Xu4"/>
@@ -40,7 +40,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mek-VC-00f">
                     <rect key="frame" x="17" y="243.5" width="380" height="409"/>
                     <subviews>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이름" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="95q-Wz-gwi" customClass="CustomLabel" customModule="woorischool" customModuleProvider="target">
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이름" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="95q-Wz-gwi" customClass="CustomLabel" customModule="우리스쿨" customModuleProvider="target">
                             <rect key="frame" x="12" y="20" width="356" height="47"/>
                             <color key="backgroundColor" name="iceBlue"/>
                             <constraints>
@@ -320,7 +320,7 @@
                                 <constraint firstAttribute="trailing" secondItem="aSb-oV-Y7V" secondAttribute="trailing" id="xad-5k-bhg"/>
                             </constraints>
                         </stackView>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dvG-6p-3C3" customClass="CustomButton" customModule="woorischool" customModuleProvider="target">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dvG-6p-3C3" customClass="CustomButton" customModule="우리스쿨" customModuleProvider="target">
                             <rect key="frame" x="18" y="268" width="344" height="50"/>
                             <color key="backgroundColor" name="whiteTwo"/>
                             <constraints>
